--- a/_src/html/index.html
+++ b/_src/html/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="global-wrapper" >
-        <partial src="header.html"></partial>
+        <partial src="sidebar.html"></partial>
         <partial src="page_layout.html"></partial>
     </div>
    <script src="scripts/main.min.js"></script>
