--- a/_src/html/index.html
+++ b/_src/html/index.html
@@ -10,7 +10,12 @@
 <body>
     <div class="global-wrapper" >
         <partial src="sidebar.html"></partial>
-        <partial src="page_layout.html"></partial>
+        <div class="page-layout">
+            <partial src="header.html"></partial>
+            <div class="page-body">
+                <partial src="devices.html"></partial>
+              </div>
+          </div>
     </div>
    <script src="scripts/main.min.js"></script>
 </body>
