--- a/_src/html/index.html
+++ b/_src/html/index.html
@@ -13,7 +13,7 @@
         <div class="page-layout">
             <partial src="header.html"></partial>
             <div class="page-body">
-                <partial src="tariffs.html"></partial>
+                <partial src="userpage.html"></partial>
               </div>
           </div>
     </div>
